<resources>

    <string name="app_name">Irrigation</string>
    <string name="appbar_scrolling_view_behavior">true</string>
    <string name="not_before_time">Not before time</string>
    <string name="not_after_time">Not after time</string>
    <string name="language">Language</string>
    <string name="number_of_devices_in_chain"># of devices in chain</string>
    <string name="pump_capacity">Pump capacity</string>
    <string name="mode">Mode</string>

    <string-array name="language_array">
        <item>English</item>
        <item>Chinese</item>

    </string-array>

    <string-array name="mode_array">
        <item>Expert</item>
        <item>Detailed</item>

    </string-array>


    <string-array name="debug_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>


    <string-array name="debug_configLink">
        <item>http://www.sunshinelabs.nl</item>
        <item>http://www.sunshinelabs.cn</item>
    </string-array>

    <string-array name="debug_type">
        <item>hotspot</item>
        <item>server</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_engineering">Engineering Page</string>
    <string name="title_activity_uitest">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_msg_no_network">Please check your internet connection.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="start_time">Start Time</string>
    <string name="minutes">Minute</string>
    <string name="volume">Volume</string>
    <string name="stop_time">Stop Time</string>
    <string name="disable">Disable</string>
    <string name="disable_today">Disable Today</string>
    <string name="edit_valve_table">Edit Valve \n Table</string>
    <string name="valve_assignment">Valve Assignments</string>
    <string name="msg_waiting_for_response">Waiting for response.....</string>
    <string name="msg_retry_for_connection">Retry for connection.</string>
    <string name="msg_unable_to_connect">Unable to connect, Please try again later.</string>
    <string name="msg_waiting_for_connectivity">Waiting for internet connectivity.....</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="liters">LITRES</string>
    <string name="please_check_internet_connection_first">Please check internet connection first.</string>

    <string name="error_msg_location">Unable to fetch location, Please try again later.</string>
    <string name="msg_confirmation_delete">Are you sure you want to delete!</string>
    <string name="connected">Connected</string>
    <string name="connected_by_hotspot">Connected by Hotspot</string>
    <string name="hotspot">Hotspot</string>
    <string name="connected_by_local_network">Connected by local network.</string>
    <string name="load_device_list_file">Load device list file</string>
    <string name="network_config">Network Configration</string>
    <string name="enter_ssid">Enter SSID</string>
    <string name="set_ssid">Set SSID</string>
    <string name="enter_pass">Enter Password</string>
    <string name="save_to_db">Save to DB</string>
    <string name="reset">Reset\'</string>
    <string name="ip_add_edge_controller">IP address EDGE Controller.</string>
    <string name="change">Change</string>
    <string name="load_device_file">Load device file</string>
    <string name="delete_device_file">Delete device file</string>
    <string name="switch_to_english">切换到中文</string>


    <string name="pressure_bar">Pressure Bar</string>
    <string name="flow_lpm">Flow lpm</string>
    <string name="actual">Actual(L)</string>
    <string name="Required">Required(L)</string>
    <string name="up">UP</string>
    <string name="down">DOWN</string>
    <string name="min">Min</string>
    <string name="dis_24">DIS 24</string>
    <string name="dis">DIS</string>
    <string name="config">Config</string>
    <string name="version">1.4</string>
    <string name="ver">ver \n1.4</string>
    <string name="set">set</string>
    <string name="save">save</string>
    <string name="local_network">Local Network</string>
    <string name="select_network">Select Network</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="machine_ap">Machine AP</string>
    <string name="default_mode">Default Mode</string>
    <string name="edit_valve_assignment">Edit Valve Assignment</string>
    <string name="edit">Edit</string>
    <string name="valve_1">Valve 1</string>
    <string name="valve_2">Valve 2</string>
    <string name="valve_3">Valve 3</string>
    <string name="fill">Fill</string>
    <string name="main_pump">Main Pump</string>
    <string name="recirc_pump">Recirc Pump</string>
    <string name="mix_pump">Mix Pump</string>
    <string name="inject_pump">Inject Pump</string>
    <string name="make_permanent">Make permanent</string>
    <string name="pause">pause</string>
    <string name="duration">Duration</string>
    <string name="end_time">End time</string>
    <string name="enable">Enable</string>
    <string name="permanently">Permanently</string>
    <string name="group">Group</string>
    <string name="valve">Valve</string>
    <string name="dashboard">Dashboard</string>
    <string name="groups">Groups</string>
    <string name="user_configuration">User Configuration</string>
    <string name="network_connection">Network Connection</string>
    <string name="nutrigator_control">Nutrigator Control</string>
    <string name="demo_mode">Demo Mode</string>
    <string name="test_mode">Test Mode</string>
    <string name="debug">Debug</string>
    <string name="edit_connection">Edit Connection</string>
    <string name="connect_local_host">Connect a local host</string>
    <string name="sync_data">Sync the configuration data</string>
    <string name="config_link">Config download link</string>
    <string name="nutrigation">Nutrigation</string>
    <string name="allOff">All Off</string>
    <string name="allOn">All On</string>
    <string name="msg_restart">For better exp, Please restart application</string>
    <string name="switch_mode">Switch Mode</string>
    <string name="mode_manual">Mode : Manual</string>
    <string name="mode_automatic">Mode : Automatic</string>
    <string name="manual_on">Manual ON</string>
    <string name="manual_off">Manual Off</string>
</resources>
