<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.ChangeMachineApDetailsActivity"
    android:padding="@dimen/paddingLarge"
    android:background="@drawable/bg_valve_adv_mode">

    <TextView
        android:id="@+id/txtSsidHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_ssid"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/textSizeSecondary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <EditText
        android:id="@+id/edtSSID"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="2.5"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtSsidHint"
        app:layout_constraintLeft_toLeftOf="@id/txtSsidHint"
        app:layout_constraintRight_toLeftOf="@id/btnSSID"
        android:background="@drawable/bg_edt_white"
        android:padding="@dimen/paddingMeduim"
        android:layout_marginTop="@dimen/marginMeduimLarge"
        android:textColor="@color/colorTextSecondary"
        />
    <Button
        android:id="@+id/btnSSID"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/edtSSID"
        app:layout_constraintTop_toTopOf="@id/edtSSID"
        app:layout_constraintBottom_toBottomOf="@id/edtSSID"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_btn"
        android:layout_marginLeft="@dimen/marginLarge"
        android:text="@string/set_ssid"
        />

    <TextView
        android:id="@+id/txtPassHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_pass"
        app:layout_constraintTop_toBottomOf="@id/edtSSID"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/textSizeSecondary"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/marginMeduimLarge"
        />

    <EditText
        android:id="@+id/edtPass"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="2.5"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtPassHint"
        app:layout_constraintLeft_toLeftOf="@id/txtPassHint"
        app:layout_constraintRight_toLeftOf="@id/btnPass"
        android:background="@drawable/bg_edt_white"
        android:padding="@dimen/paddingMeduim"
        android:textColor="@color/colorTextSecondary"
        android:layout_marginTop="@dimen/marginMeduimLarge"
        />
    <Button
        android:id="@+id/btnPass"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/edtPass"
        app:layout_constraintTop_toTopOf="@id/edtPass"
        app:layout_constraintBottom_toBottomOf="@id/edtPass"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_btn"
        android:layout_marginLeft="@dimen/marginLarge"
        android:text="@string/set_ssid"
        />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnPass"
        android:background="@drawable/bg_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/marginLarge"
        android:text="@string/save_to_db"
        android:enabled="false"
        />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_reset"
        app:layout_constraintTop_toBottomOf="@id/btnSave"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/marginLarge"
        android:text="@string/reset"
        android:textAllCaps="true"
        android:enabled="false"
        />

</android.support.constraint.ConstraintLayout>