<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_widget"
    android:padding="@dimen/paddingLarge"
    tools:context=".activities.IpAddEGDEControllerActivity"
    >
<com.ve.irrigation.customview.CustomTextViewLight
    android:id="@+id/txtTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:text="@string/ip_add_edge_controller"
    android:gravity="center"
    android:textColor="@color/colorTextSecondary"
    android:textSize="@dimen/textSizePrimary"
    />
    
    <com.ve.irrigation.customview.CustomTextViewLight
        android:id="@+id/txtChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintLeft_toLeftOf="@id/txtTitle"
        android:layout_marginTop="@dimen/marginLarge"
        android:text="@string/save"
        android:paddingLeft="@dimen/paddingMeduimLarge"
        android:paddingRight="@dimen/paddingMeduimLarge"
        android:paddingTop="@dimen/paddingMeduim"
        android:paddingBottom="@dimen/paddingMeduim"
        android:textColor="@color/colorTextSecondary"
        />
    <com.ve.irrigation.customview.CustomEditTextView
        android:id="@+id/edtIpAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/txtChange"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtChange"
        app:layout_constraintBottom_toBottomOf="@id/txtChange"
        android:layout_marginLeft="@dimen/marginLarge"
        android:background="@drawable/bg_edt_white"
        android:padding="@dimen/paddingSmall"
        />
    <com.ve.irrigation.customview.CustomTextViewLight
        android:id="@+id/txtLoadDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        app:layout_constraintTop_toBottomOf="@id/txtChange"
        app:layout_constraintLeft_toLeftOf="@id/txtTitle"
        android:layout_marginTop="@dimen/marginLarge"
        android:text="@string/load_device_file"
        android:paddingLeft="@dimen/paddingMeduimLarge"
        android:paddingRight="@dimen/paddingMeduimLarge"
        android:paddingTop="@dimen/paddingMeduim"
        android:paddingBottom="@dimen/paddingMeduim"
        android:textColor="@color/colorTextSecondary"
        />
    <com.ve.irrigation.customview.CustomTextViewLight
        android:id="@+id/txtDeleteDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        app:layout_constraintTop_toBottomOf="@id/txtLoadDevice"
        app:layout_constraintLeft_toLeftOf="@id/txtTitle"
        android:layout_marginTop="@dimen/marginLarge"
        android:text="@string/delete_device_file"
        android:paddingLeft="@dimen/paddingMeduimLarge"
        android:paddingRight="@dimen/paddingMeduimLarge"
        android:paddingTop="@dimen/paddingMeduim"
        android:paddingBottom="@dimen/paddingMeduim"
        android:textColor="@color/colorTextSecondary"
        />

</android.support.constraint.ConstraintLayout>